# quantum-error-correction-codes-comparison

./: .gitmodules  README.md  pyproject.toml
Overleaf-Dissertation-Files/: MaciekZ_Diss_Latex.tex  UoYCSproject.cls  dummy.tex  dummyBib.bib
experiments/config/: sweep_snr_ldpc.yaml
experiments/data/CASCADE/: data__algorithm=original;key_size=10000;error_rate=vary  data__algorithm=original;key_size=10240;error_rate=vary  data__algorithm=original;key_size=1024;error_rate=vary  data__algorithm=original;key_size=20480;error_rate=vary  data__algorithm=original;key_size=2048;error_rate=vary  data__algorithm=original;key_size=256;error_rate=vary
experiments/data/LDPC/: snr_sweep_0_to_7_5_1000frames_per_point.ndjson  snr_sweep_ed_compare.ndjson
experiments/scripts/: Progress_update_methodology.md  part_1_results.ipynb  plot_graphs clean.html  plot_graphs clean.ipynb  plot_graphs.ipynb  run_sweep.py
experiments/scripts/achived/: outdated - Progress_update_methodology.md
